<resources>
    <string name="app_name">Tandoor</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="termsAndConditions"><u>Terms &amp; Conditions</u></string>
    <string name="login">Login</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="email">Email</string>
    <string name="requiredField">Required Field</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="AlreadyRegistered">Already Registered? <u><b>Login Here</b></u></string>
    <string name="myAccount">My Account</string>
    <string name="orderHistory">Order History</string>
    <string name="wallet">My Cart</string>
    <string name="newSubscription">New Subscription</string>
    <string name="subscriptionHistory">Subscription History</string>
    <string name="others">Others</string>
    <string name="subscription">Subscription</string>
    <string name="shareApp">Share App</string>
    <string name="congratulations">Congratulations!</string>
    <string name="enterCodeManually">Enter the code Manually</string>
    <string name="code">Cg.3215</string>
    <string name="verify">Verify</string>
    <string name="homeFragment">Home</string>
    <string name="vegetarianPlates">Vegetarian Plates</string>
    <string name="vegetarianCurries">Vegetarian Curries</string>
    <string name="meatCurries">Meat Curries</string>
    <string name="vegetarian_plates">vegetarian_plates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpHere">Not Registered? <u><b>Signup Here</b></u></string>
    <string name="itemName">Item Name</string>
    <string name="itemRating">Item Rating</string>
    <string name="itemDescription">Item Description</string>
    <string name="itemRateInUsd">Item Rate In Usd</string>
    <string name="listName">Veg</string>
    <string name="addToCart">Add to cart</string>
    <string name="userMobileNumber">Mobile Number</string>
    <string name="skip">Skip</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="logout">Logout</string>
    <string name="enterValidEmail">Enter a valid email address</string>
    <string name="loginSuccessfull">Login successful</string>

    <string name="confirm">Do you want to logout?</string>
    <string name="delete">Confirm Logout...</string>
    <string name="deleteBtn">Delete</string>
    <string name="atleastCharacter">At least 3 characters</string>
    <string name="passworderror">Enter password</string>
    <string name="donotMatchPassword">Do Not Match Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="unitPrice">Unit Price : </string>

    <string name="search">Search</string>
    <string name="validCountry">Enter valid Country</string>
    <string name="validStte">Enter valid state</string>

    <string name="loading">Loading...</string>
    <string name="coming_soon">Coming Soon...</string>

    <string name="getotp">Get OTP</string>
    <string name="correwctOtp">Please enter correct otp</string>
    <string name="email_id">Email id</string>
    <string-array name="tipArray">
        <item>0</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <string-array name="qtyArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>

    </string-array>

    <!--Error Message-->
    <string name="networkError">Network is not Available</string>
    <string name="serverError">Server Error, Please try again later</string>

    <!---->


    <!--Exit-->
    <string name="close">Please click BACK again to exit</string>
    <string name="version">Version 1.0</string>
    <string name="start_order">Start Odering</string>
    <string name="any_order">Your Cart is empty. Add something from menu.</string>
    <string name="ordernow">Order Now</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="delivery_charges">Delivery charges depend on delivery method</string>
    <string name="tip">Tip charges depend on below tip</string>

    <string name="city">City</string>
    <string name="Address1">Address1</string>
    <string name="Address2">Address2</string>
    <string name="pincode">Postal Code</string>
    <string name="MiddleName">Middle Name</string>
    <string name="state">State</string>
    <string name="Country">Country</string>
    <string name="name">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_type">Address Type</string>
    <string name="home_all_day_delivery">Home (All day delivery)</string>
    <string name="work_Delivery_between">Work (Delivery between 10 am - 5 pm )</string>
    <string name="save">Save</string>
    <string name="add_a_new_address">ADD NEW DELIVERY ADDRESS</string>
    <string name="delivery_TO_exisying_address">DELIVERY TO EXISTING ADDRESS</string>

    <string name="select_address">Select Address</string>
    <string name="enterCity">Please enter city name</string>
    <string name="address1">Please enter address1</string>
    <string name="address2">Please enter address2</string>
    <string name="postalcode">Please enter postal code</string>
    <string name="enterstate">Please enter state</string>
    <string name="country">Please enter country</string>
    <string name="middleName">Please enter middle name</string>
    <string name="firstname">Please enter first name</string>
    <string name="enterlastName">Please enter last name</string>
    <string name="enterphone_number">Please enter phone number</string>
    <string name="rlMyAddress">Addresses</string>
    <string name="change_or_add_address">Change or Add Address</string>
    <string name="variation">Spicy: </string>
    <string name="unitprice">Unit Price : </string>
    <string name="Qty">Qty :</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity : </string>
    <string name="clearAll">Clear All</string>
    <string name="enterSource">Enter city</string>
    <string name="ContinueToBuy">Continue To Buy</string>
    <string name="shipment_price">Shipment price</string>
    <string name="gst">GST</string>
    <string name="Totalamount">Total amount</string>
    <string name="initialstate">Initial State</string>
    <string name="cardnumber">Entering Card Number</string>
    <string name="entering_cvc">Entering CVC</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="submit">Submit</string>
    <string name="deleteAddress">Are you sure you want to delete?</string>
    <string name="deleteAddressConfirm">Address Delete...</string>
    <string name="itemDelete">Item Delete...</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delivery">Delivery</string>
    <string name="PaymentType">Payment Type</string>
    <string name="note">Note</string>
    <string name="coupon">Coupon</string>
    <string name="DeliveryMethods">Delivery Methods</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="Checkout">Check out</string>
    <string name="menu">Menu</string>
    <string name="update">Update</string>
    <string name="account_owner">Account Owner</string>
    <string name="placeorder">Place Order</string>
    <string name="ShippingAddress">Shipping Address</string>
    <string name="BillingAddress">Billing Address</string>
    <string name="userid">User id</string>
    <string name="username">User Name</string>
    <string name="successfully">Your profile has been updated successfully</string>
    <string name="orderDetails">Order Detail</string>
    <string name="selectDeliverymethod">Please select delivery method</string>
    <string name="selectTip">Please select tip</string>
    <string name="enternote">Please enter your valuable review</string>
    <string name="address">Please add address</string>
    <string name="updated">Update Profile</string>
    <string name="tiffinmenu">Tiffins Menu</string>
    <string name="addAddress">NEW ADDRESS</string>
    <string name="add">ADD Address</string>
    <string name="showfirstaddress">Show First Address of Customer Change</string>
    <string name="somethingwrong">Something went wrong</string>
    <string name="pickup">Pickup</string>
    <string name="enter_note">Enter note</string>
    <string name="apply">Apply</string>
    <string name="updateAddress">Update Address</string>
    <string name="any_address">Your Addresses is empty. Add something from new address.</string>
    <string name="any_Order">Your Order History is empty. Add something from menu.</string>
    <string name="enterCoupon">Enter Coupon</string>
</resources>
