<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context="tandoori.resturant.mobile.Activity.VerificationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/cardshape"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCongratulations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60sdp"
                android:gravity="center"
                android:text="@string/congratulations"
                android:textColor="@color/green"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp">

                <ProgressBar
                    android:id="@+id/progressBarCircle"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ring_another"
                    android:indeterminate="false"
                    android:max="60"
                    android:progress="40"
                    android:progressDrawable="@drawable/ring" />

                <TextView
                    android:id="@+id/tvTimeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="00:00"
                    android:textColor="#000"
                    android:textSize="@dimen/_18ssp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvEnterCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/enterCodeManually"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/etEnterCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:drawableLeft="@drawable/phone"
                android:drawableStart="@drawable/phone"
                android:gravity="center"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/green"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:layerType="software"
                android:src="@drawable/dotted" />

            <Button
                android:id="@+id/btVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_60sdp"
                android:layout_marginRight="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/shape"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
            <Button
                android:id="@+id/btSkip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_60sdp"
                android:layout_marginRight="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/shape"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
