<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context="tandoori.resturant.mobile.Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeMain"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_490sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:focusableInTouchMode="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/username"
                        android:drawableRight="@drawable/username"
                        android:gravity="center_vertical"
                        android:hint="@string/userName"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:text="coder.app04@gmail.com"
                        android:textSize="@dimen/_12ssp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_below="@+id/tilUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:counterEnabled="false"
                    app:passwordToggleTint="@color/white"
                    app:counterMaxLength="5"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="qwert@1234"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/white"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/_12ssp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tilPassword"
                    android:layout_gravity="left|start"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/forgetPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9ssp" />

                <RelativeLayout
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tvForgetPassword"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp">

                    <Button
                        android:id="@+id/btLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/shape"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:id="@+id/tvSignUpHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btLogin"
                        android:layout_centerHorizontal="true"
                        android:padding="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/signUpHere"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/shape_image" />


                <ImageView
                    android:id="@+id/imGooglePlus"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_above="@+id/imFacebook"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:src="@drawable/g_icon" />

                <ImageView
                    android:id="@+id/imFacebook"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_90sdp"
                    android:layout_marginStart="@dimen/_90sdp"
                    android:src="@drawable/f_icon" />

            </RelativeLayout>

<!--
            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/relativeMain"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/greeeshape_image" />
-->

        </RelativeLayout>

    </ScrollView>
</LinearLayout>